[package]
name = "csl-experimental"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# cuslop
csl-cuda = { workspace = true }

# prover-clean subcrates
csl-utils = { workspace = true }
csl-jagged-sumcheck = { workspace = true }
slop-algebra = { workspace = true }
slop-alloc = { workspace = true }
slop-tensor = { workspace = true }
slop-multilinear = { workspace = true }
slop-sumcheck = { workspace = true }
slop-challenger = { workspace = true }

# misc
itertools = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
num-bigint = "0.4.6"

[dev-dependencies]
serial_test = "3.1"
zstd = "0.13.3"
sp1-sdk = { workspace = true  }
sp1-recursion-circuit = { workspace = true }
csl-prover = { workspace = true }
sp1-recursion-compiler = { workspace = true }
slop-stacked = { workspace = true }

[[bin]]
name = "hadamard_sumcheck_bench"
path = "bin/hadamard_sumcheck_bench.rs"

[[bin]]
name = "zerocheck_bench"
path = "bin/zerocheck_bench.rs"


[[bin]]
name = "look_ahead_bench"
path = "bin/look_ahead_bench.rs"


[lints]
workspace = true
