[package]
name = "csl-jagged"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-device = { workspace = true }
csl-mle = { workspace = true }
csl-baby-bear = { workspace = true }

slop-baby-bear = { workspace = true }
slop-algebra = { workspace = true }

tokio = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
rand = "0.8"
