[package]
name = "slop-jagged"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
slop-multilinear = { workspace = true }
slop-sumcheck = { workspace = true }
slop-algebra = { workspace = true }
slop-utils = { workspace = true }
slop-challenger = { workspace = true }
slop-matrix = { workspace = true }
itertools = "0.12.0"
tracing = "0.1"
rayon = "1.5.0"
serde = { version = "1.0.207", features = ["derive"] }


[dev-dependencies]
slop-baby-bear = { workspace = true }
rand = "0.8.5"
