[package]
name = "csl-jagged"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-cuda = { workspace = true }
csl-basefold = { workspace = true }
csl-tracing = { workspace = true }
slop-tensor = { workspace = true }

slop-baby-bear = { workspace = true }
slop-algebra = { workspace = true }
slop-jagged = { workspace = true }
slop-multilinear = { workspace = true }
slop-challenger = { workspace = true }
slop-basefold = { workspace = true }
slop-stacked = { workspace = true }
slop-basefold-prover = { workspace = true }
slop-commit = { workspace = true }
slop-alloc = { workspace = true }
slop-sumcheck = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
[lints]
workspace = true

[dev-dependencies]
futures = { workspace = true }
rand = "0.8"
serial_test = { workspace = true }
