[package]
name = "csl-logup-gkr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-cuda = { workspace = true }

slop-air = { workspace = true }
slop-algebra = { workspace = true }
slop-alloc = { workspace = true }
slop-koala-bear = { workspace = true }
slop-tensor = { workspace = true }
slop-sumcheck = { workspace = true }
slop-multilinear = { workspace = true }
slop-challenger = { workspace = true }
slop-futures = { workspace = true }

sp1-hypercube = { workspace = true }
tokio = { workspace = true }
itertools = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rayon = "1.10.0"

[lints]
workspace = true
