[package]
name = "csl-machine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-cuda = { workspace = true }
csl-jagged = { workspace = true }
csl-zerocheck = { workspace = true }
csl-air = { workspace = true }
csl-tracing = { workspace = true }


slop-air = { workspace = true }
slop-baby-bear = { workspace = true }
slop-algebra = { workspace = true }
slop-jagged = { workspace = true }
slop-tensor = { workspace = true }
slop-multilinear = { workspace = true }

sp1-stark = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-primitives = { workspace = true }

tracing = { workspace = true }
sysinfo = "0.31.2"
serde = { workspace = true }
tokio = { workspace = true }

# for perf binary
clap = { version = "4.5.7", features = ["derive", "env"] }
bincode = "1.3.3"

[lints]
workspace = true
