[package]
name = "csl-merkle-tree"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


[lints]
workspace = true


[dependencies]
csl-device = { workspace = true }

slop-symmetric = { workspace = true }

thiserror = { workspace = true }

[dev-dependencies]
csl-baby-bear = { workspace = true }
slop-baby-bear = { workspace = true }

rand = "0.8"
