[package]
name = "csl-merkle-tree"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


[lints]
workspace = true


[dependencies]
csl-cuda = { workspace = true }

slop-futures = { workspace = true }
slop-alloc = { workspace = true }
slop-tensor = { workspace = true }
slop-symmetric = { workspace = true }
slop-baby-bear = { workspace = true }
slop-commit = { workspace = true }
slop-merkle-tree = { workspace = true }

thiserror = { workspace = true }

tokio = { workspace = true }

[dev-dependencies]
rand = "0.8"
