[package]
name = "csl-mle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-device = { workspace = true }

slop-algebra = { workspace = true }
slop-baby-bear = { workspace = true }
slop-multilinear = { workspace = true }

tokio = { workspace = true }

itertools = { workspace = true }

[dev-dependencies]
rand = "0.8"

[lints]
workspace = true
