[package]
name = "spl-multi-pcs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
spl-algebra = { path = "../algebra" }
p3-util = { workspace = true }
p3-matrix = {workspace = true}
itertools = "0.12.0"
serde = { version = "1.0.207", features = ["derive"] }
rayon = "1.5.1"
num = "0.4.3"

[dev-dependencies]
rand = "0.8.4"
p3-baby-bear = { workspace = true }