[package]
name = "slop-multilinear"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
slop-algebra = { workspace = true}
p3-util = { workspace = true }
p3-matrix = {workspace = true}
p3-challenger = {workspace = true}
itertools = "0.12.0"
serde = { version = "1.0.207", features = ["derive"] }
rayon = "1.10.0"
tracing = "0.1.0"

[dev-dependencies]
