[package]
name = "slop-multilinear"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
slop-algebra = { workspace = true}
slop-matrix = {workspace = true}
slop-challenger = {workspace = true}
slop-utils = {workspace = true}
slop-maybe-rayon = {workspace = true}
serde = { version = "1.0.207", features = ["derive"] }
rayon = "1.10.0"
tracing = "0.1.0"

[dev-dependencies]
slop-baby-bear = { workspace = true }
rand = "0.8.5"
