[package]
name = "spl-multivariate-adapter"
serde = "1.0"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
spl-algebra = { workspace = true}
spl-multilinear = { workspace = true }
spl-utils = { workspace = true }

p3-challenger = {workspace = true}
p3-dft = {workspace = true}
p3-fri = {workspace = true}
p3-baby-bear = {workspace = true}
p3-matrix = {workspace = true}
p3-air = {workspace = true}
p3-commit = {workspace = true}
p3-merkle-tree = {workspace = true}
p3-poseidon2 = {workspace = true}
p3-symmetric = {workspace = true}
p3-uni-stark = {workspace = true}
p3-util = {workspace = true}

itertools = "0.12.0"
thiserror = "1.0"
rand = "0.8.5"
rayon = "1.5.1"
serde = "1.0"
tracing = "0.1.40"


[dev-dependencies]
