[package]
name = "csl-perf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-cuda = { workspace = true }
csl-prover = { workspace = true }
csl-tracing = { workspace = true }
csl-jagged = { workspace = true }

slop-jagged = { workspace = true }
slop-baby-bear = { workspace = true }

sp1-stark = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-prover = { workspace = true, features = ["unsound"] }
sp1-recursion-circuit = { workspace = true }
sp1-recursion-compiler = { workspace = true }


csv = "1.3.0"
tracing = { workspace = true }
tokio = { workspace = true }

clap = { version = "4.5.7", features = ["derive", "env"] }
bincode = "1.3.3"
prettytable = "0.10.0"

# telemetry
opentelemetry = "^0.23.0"
opentelemetry_sdk = { version = "^0.23.0", features = [
    "trace",
    "rt-tokio",
    "logs_level_enabled",
] }
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry-otlp = { version = "^0.16.0", features = ["default", "logs"] }
tracing-opentelemetry = "^0.24"
opentelemetry-appender-tracing = "0.4.0"
tracing-subscriber = "0.3.19"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["profiling", "stats"] }

[features]
bigint-rug = [
    "sp1-core-executor/bigint-rug",
    "sp1-core-machine/bigint-rug",
    "csl-prover/bigint-rug",
]

[lints]
workspace = true
