[package]
name = "sp1-perf"
description = "A performance evaluation tool for SP1 programs."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
default-run = "sp1-perf"
publish = false

[dependencies]
sp1-core-executor = { workspace = true }
sp1-sdk = { workspace = true, default-features = false }
clap = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "sp1-perf"
path = "src/main.rs"

[[bin]]
name = "sp1-perf-executor"
path = "src/executor.rs"

[features]
bigint-rug = ["sp1-core-executor/bigint-rug"]
native-gnark = ["sp1-sdk/native-gnark"]
network = ["sp1-sdk/network"]
