[package]
name = "csl-perf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-cuda = { workspace = true }
csl-prover = { workspace = true }
csl-tracing = { workspace = true }
cslpc-prover = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-prover = { workspace = true, features = ["experimental"] }
sp1-hypercube = { workspace = true }
sp1-prover-types = { workspace = true }

csv = "1.3.0"
tracing = { workspace = true }
tokio = { workspace = true }

clap = { version = "4.5.7", features = ["derive", "env"] }
bincode = "1.3.3"
prettytable = "0.10.0"
dotenv = { workspace = true }

# telemetry
opentelemetry = "^0.23.0"
opentelemetry_sdk = { version = "^0.23.0", features = [
    "trace",
    "rt-tokio",
    "logs_level_enabled",
] }
opentelemetry-otlp = { version = "^0.16.0", features = ["default", "logs"] }
tracing-opentelemetry = "^0.24"
tracing-subscriber = "0.3.19"

[features]
bigint-rug = [
    "sp1-core-executor/bigint-rug",
    "sp1-core-machine/bigint-rug",
    "csl-prover/bigint-rug",
]

[lints]
workspace = true


[[bin]]
name = "e2e"
path = "src/bin/e2e.rs"

[[bin]]
name = "reduce"
path = "src/bin/reduce.rs"

[[bin]]
name = "exec"
path = "src/bin/exec.rs"

[[bin]]
name = "node"
path = "src/bin/node.rs"
