[package]
name = "csl-prover-clean"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-cuda = { workspace = true }

slop-algebra = { workspace = true }
slop-alloc = { workspace = true }
slop-tensor = { workspace = true }
slop-multilinear = { workspace = true }
slop-sumcheck = { workspace = true }
slop-challenger = { workspace = true }
slop-baby-bear = { workspace = true }
slop-basefold = { workspace = true }
slop-jagged = { workspace = true }

futures = "0.3"

itertools = { workspace = true }

rand = { workspace = true }
tokio = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }
lazy_static = "1.5.0"

num-bigint = "0.4.6"

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bin]]
name = "hadamard_sumcheck_bench"
path = "bin/hadamard_sumcheck_bench.rs"

[[bin]]
name = "zerocheck_bench"
path = "bin/zerocheck_bench.rs"

[lints]
workspace = true
