[package]
name = "csl-prover-clean"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-cuda = { workspace = true }

slop-air = { workspace = true }
slop-algebra = { workspace = true }
slop-alloc = { workspace = true }
slop-tensor = { workspace = true }
slop-multilinear = { workspace = true }
slop-sumcheck = { workspace = true }
slop-challenger = { workspace = true }
slop-koala-bear = { workspace = true }
slop-basefold = { workspace = true }
slop-jagged = { workspace = true }

sp1-hypercube = { workspace = true }
bincode = "1.3"
thiserror = "1.0"

futures = "0.3"

itertools = { workspace = true }

rand = { workspace = true }
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

num-bigint = "0.4.6"

rayon = "1.10.0"
slop-futures = { workspace = true }


[[bin]]
name = "hadamard_sumcheck_bench"
path = "bin/hadamard_sumcheck_bench.rs"

[[bin]]
name = "zerocheck_bench"
path = "bin/zerocheck_bench.rs"

[[bin]]
name = "logup_gkr_bench"
path = "bin/logup_gkr_bench.rs"

[[bin]]
name = "look_ahead_bench"
path = "bin/look_ahead_bench.rs"


[lints]
workspace = true
