[package]
name = "csl-prover-clean"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# cuslop
csl-cuda = { workspace = true }
csl-air = { workspace = true }
csl-jagged = { workspace = true }
sp1-derive = { workspace = true }
csl-tracegen = { workspace = true }
csl-merkle-tree = { workspace = true }
csl-basefold = { workspace = true }
csl-dft = { workspace = true }

# slop
slop-air = { workspace = true }
slop-algebra = { workspace = true }
slop-alloc = { workspace = true }
slop-tensor = { workspace = true }
slop-matrix = { workspace = true }
slop-multilinear = { workspace = true }
slop-sumcheck = { workspace = true }
slop-challenger = { workspace = true }
slop-koala-bear = { workspace = true }
slop-basefold = { workspace = true }
slop-jagged = { workspace = true }
slop-commit = { workspace = true }
slop-futures = { workspace = true }
slop-basefold-prover = { workspace = true }
slop-merkle-tree = { workspace = true }
slop-bn254 = { workspace = true }
slop-symmetric = { workspace = true }
slop-dft = { workspace = true }

# sp1
sp1-hypercube = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-prover = { workspace = true }

# misc
itertools = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

bincode = "1.3"
thiserror = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4.6"
rayon = "1.10.0"

[dev-dependencies]
serial_test = "3.1"
zstd = "0.13.3"
sp1-sdk = { workspace = true, features = ["unsound"] }
sp1-recursion-circuit = { workspace = true }
csl-prover = { workspace = true }
sp1-recursion-compiler = { workspace = true }
slop-stacked = { workspace = true }

[[bin]]
name = "hadamard_sumcheck_bench"
path = "bin/hadamard_sumcheck_bench.rs"

[[bin]]
name = "zerocheck_bench"
path = "bin/zerocheck_bench.rs"

[[bin]]
name = "logup_gkr_bench"
path = "bin/logup_gkr_bench.rs"

[[bin]]
name = "look_ahead_bench"
path = "bin/look_ahead_bench.rs"


[lints]
workspace = true
