[package]
name = "csl-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-cuda = { workspace = true }
csl-jagged = { workspace = true }
csl-zerocheck = { workspace = true }
csl-air = { workspace = true }
csl-tracegen = { workspace = true }
csl-logup-gkr = { workspace = true }
slop-koala-bear = { workspace = true }
slop-algebra = { workspace = true }
slop-jagged = { workspace = true }

sp1-hypercube = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-prover = { workspace = true, features = ["unsound"] }

tracing = { workspace = true }
sysinfo = "0.31.2"
serde = { workspace = true }

[dev-dependencies]
slop-algebra = { workspace = true }
slop-jagged = { workspace = true }

[features]
default = []
bigint-rug = ["sp1-core-executor/bigint-rug", "sp1-core-machine/bigint-rug"]

[lints]
workspace = true
