[package]
name = "sp1-prover"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
exclude = ["src/vk_map.bin"]

[dependencies]
sp1-recursion-compiler = { workspace = true }
sp1-prover-types = { workspace = true }
# sp1-recursion-core = { workspace = true }

sp1-recursion-circuit = { workspace = true }
sp1-recursion-machine = { workspace = true }
sp1-recursion-executor = { workspace = true }
sp1-jit = { workspace = true }
sp1-recursion-gnark-ffi = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-derive = { workspace = true }
slop-challenger = { workspace = true }
slop-basefold = { workspace = true }
sp1-hypercube = { workspace = true }
slop-air = { workspace = true }
slop-jagged = { workspace = true }
slop-futures = { workspace = true }
slop-symmetric = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-primitives = { workspace = true }
slop-algebra = { workspace = true }
slop-bn254 = { workspace = true }
slop-stacked = { workspace = true }
# slop-util = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
futures = { workspace = true }
serial_test = { workspace = true }
num-bigint = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }
lru = { workspace = true }
eyre = { workspace = true }
hashbrown = { workspace = true, features = ["inline-more"] }
enum-map = { workspace = true }
static_assertions = { workspace = true }
rand = { workspace = true }
mti = { workspace = true }
opentelemetry = { workspace = true }
dashmap = { workspace = true }
pin-project = { workspace = true }
tonic = { workspace = true }
reqwest = { workspace = true }

[build-dependencies]
downloader = { workspace = true, features = ["rustls-tls", "verify"] }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
test-artifacts = { workspace = true }
anyhow = { workspace = true }
sp1-verifier = { workspace = true, features = ["compressed"] }

# [[bin]]
# name = "build_plonk_bn254"
# path = "scripts/build_plonk_bn254.rs"

# [[bin]]
# name = "build_groth16_bn254"
# path = "scripts/build_groth16_bn254.rs"

[[bin]]
name = "build_recursion_vks"
path = "scripts/build_recursion_vks.rs"
required-features = ["tokio/rt-multi-thread"]

# [[bin]]
# name = "find_maximal_shapes"
# path = "scripts/find_maximal_shapes.rs"

# [[bin]]
# name = "find_small_shapes"
# path = "scripts/find_small_shapes.rs"

# [[bin]]
# name = "find_oom_shapes"
# path = "scripts/find_oom_shapes.rs"

# [[bin]]
# name = "find_recursion_shape"
# path = "scripts/find_recursion_shape.rs"

# [[bin]]
# name = "test_shape_fixing"
# path = "scripts/test_shape_fixing.rs"

# [[bin]]
# name = "post_trusted_setup"
# path = "scripts/post_trusted_setup.rs"

[features]
native-gnark = ["sp1-recursion-gnark-ffi/native"]
debug = ["sp1-core-machine/debug"]
bigint-rug = ["sp1-core-machine/bigint-rug"]
experimental = []

[lints]
workspace = true
