[package]
name = "csl-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-cuda = { workspace = true }
csl-jagged-assist = { workspace = true }
csl-air = { workspace = true }
csl-tracegen = { workspace = true }

# prover-clean
csl-shard-prover = { workspace = true }
csl-logup-gkr = { workspace = true }
csl-basefold = { workspace = true }
csl-merkle-tree = { workspace = true }
csl-jagged-tracegen = { workspace = true }

# slop
slop-koala-bear = { workspace = true }
slop-algebra = { workspace = true }
slop-challenger = { workspace = true }
slop-jagged = { workspace = true }
slop-basefold = { workspace = true }
slop-futures = { workspace = true }

sp1-hypercube = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-prover = { workspace = true }
sp1-primitives = { workspace = true }
sp1-prover-types = { workspace = true }
sp1-core-executor = { workspace = true }

tracing = { workspace = true }
sysinfo = "0.31.2"
serde = { workspace = true }
clap = { version = "4.5.7", features = ["derive"] }

[dev-dependencies]
slop-algebra = { workspace = true }
slop-jagged = { workspace = true }

[features]
default = []
bigint-rug = ["sp1-core-machine/bigint-rug"]

[lints]
workspace = true
