[package]
name = "sp1-sdk"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
prost = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
twirp = { workspace = true, optional = true }
async-trait = { workspace = true }
reqwest-middleware = { workspace = true, optional = true }
reqwest = { workspace = true, features = [
  "rustls-tls",
  "trust-dns",
  "stream",
  "json",
], optional = true }
anyhow = { workspace = true }
sp1-prover = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-cuda = { workspace = true }
sp1-build = { workspace = true }
futures = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "process",
  "rt",
  "sync",
  "time",
] }
slop-algebra = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
cfg-if = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-hypercube = { workspace = true }
sp1-primitives = { workspace = true }
itertools = { workspace = true }
tonic = { workspace = true, features = ["tls", "tls-roots"], optional = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true, features = [
  "k256",
  "serde",
], optional = true }
backoff = { workspace = true, features = ["tokio"], optional = true }

# TEE Dependencies
k256 = { workspace = true, features = ["serde"] } # Signing
eventsource-stream = { workspace = true }         # SSE Extenstion for reqwest

[dev-dependencies]
test-artifacts = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
default = ["network", "reserved-capacity"]
native-gnark = ["sp1-prover/native-gnark"]
# TODO: Once alloy has a 1.* release, we can likely remove this feature flag, as there will be less 
# dependency resolution issues.
network = [
  "dep:prost",
  "dep:alloy-primitives",
  "dep:reqwest",
  "dep:twirp",
  "dep:reqwest-middleware",
  "dep:tonic",
  "dep:backoff",
]
native-cuda = ["sp1-cuda/native"]
tee-2fa = []
reserved-capacity = ["network"]
cuda = []
bigint-rug = ["sp1-core-machine/bigint-rug"]
unsound = ["sp1-prover/unsound"]

profiling = ["sp1-core-executor/profiling"]


[lints]
workspace = true
