[package]
name = "sp1-sdk"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
prost = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
twirp = { workspace = true, optional = true }
async-trait = { workspace = true }
reqwest-middleware = { workspace = true, optional = true }
reqwest = { workspace = true, features = [
  "rustls-tls",
  "trust-dns",
  "stream",
  "json",
], optional = true }
anyhow = { workspace = true }
sp1-prover = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-cuda = { workspace = true }
sp1-build = { workspace = true }
futures = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "process",
  "rt",
  "sync",
  "time",
  "rt-multi-thread",
] }
slop-algebra = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
cfg-if = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-hypercube = { workspace = true }
sp1-primitives = { workspace = true }
sp1-prover-types = { workspace = true, optional = true }
itertools = { workspace = true }
tonic = { workspace = true, features = ["tls", "tls-roots"], optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-kms = { workspace = true, optional = true }
rustls = { workspace = true, features = ["ring"], optional = true }
alloy-signer = { workspace = true, optional = true }
alloy-signer-aws = { workspace = true, optional = true }
alloy-signer-local = { workspace = true, optional = true }
alloy-primitives = { workspace = true, features = [
  "k256",
  "serde",
], optional = true }
backoff = { workspace = true, features = ["tokio"], optional = true }
num-bigint = { workspace = true }

# TEE Dependencies
k256 = { workspace = true, features = ["serde"] } # Signing
eventsource-stream = { workspace = true }         # SSE Extenstion for reqwest

[dev-dependencies]
test-artifacts = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-test = { workspace = true }
rstest = { workspace = true }

[features]
default = []
native-gnark = ["sp1-prover/native-gnark"]
# TODO: Once alloy has a 1.* release, we can likely remove this feature flag, as there will be less 
# dependency resolution issues.
network = [
  "dep:prost",
  "dep:aws-config",
  "dep:aws-sdk-kms",
  "dep:rustls",
  "dep:alloy-signer",
  "dep:alloy-signer-aws",
  "dep:alloy-signer-local",
  "dep:alloy-primitives",
  "dep:reqwest",
  "dep:twirp",
  "dep:reqwest-middleware",
  "dep:tonic",
  "dep:backoff",
]
native-cuda = ["sp1-cuda/native"]
tee-2fa = []
reserved-capacity = ["network", "dep:sp1-prover-types"]
cuda = []
bigint-rug = ["sp1-core-machine/bigint-rug"]
experimental = ["sp1-prover/experimental"]
profiling = ["sp1-core-executor/profiling"]
blocking = []


[lints]
workspace = true
