[package]
name = "slop-sumcheck-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
slop-challenger = {workspace = true}
slop-baby-bear = {workspace = true}

slop-algebra = {workspace = true}
slop-multilinear = {workspace = true}
slop-maybe-rayon = {workspace = true}
slop-sumcheck = {workspace = true}

itertools = "0.12.0"
tracing = "0.1.40"

[dev-dependencies]
slop-poseidon2 = {workspace = true}

rand = "0.8.4"
