[package]
name = "slop-sumcheck"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
slop-challenger = { workspace = true }
slop-baby-bear = { workspace = true }
slop-maybe-rayon = { workspace = true }
slop-alloc = { workspace = true }
slop-tensor = { workspace = true }

slop-algebra = { workspace = true }
slop-multilinear = { workspace = true }
rayon = "1.5.1"
serde = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
slop-poseidon2 = { workspace = true }
slop-basefold-prover = { workspace = true }
